load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "lodestar_promote_lib",
    srcs = ["main.go"],
    importpath = "github.com/lodestar-cli/lodestar/cmd/lodestar_promote",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/common/auth",
        "//internal/common/repo",
        "//internal/common/yaml",
    ],
)

go_binary(
    name = "lodestar_promote",
    embed = [":lodestar_promote_lib"],
    visibility = ["//visibility:public"],
)
