load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "lodestar_push_lib",
    srcs = ["main.go"],
    importpath = "github.com/lodestar-cli/lodestar/cmd/lodestar_push",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/common/auth",
        "//internal/common/repo",
        "//internal/common/yaml",
    ],
)

go_binary(
    name = "lodestar_push",
    embed = [":lodestar_push_lib"],
    visibility = ["//visibility:public"],
)
