load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "app",
    srcs = [
        "promote.go",
        "push.go",
    ],
    importpath = "github.com/lodestar-cli/lodestar/internal/app",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/common/auth",
        "//internal/common/repo",
        "//internal/common/yaml",
    ],
)
