load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "app",
    srcs = [
        "appConfig.go",
        "list.go",
        "promote.go",
        "push.go",
        "show.go",
        "state.go",
    ],
    importpath = "github.com/lodestar-cli/lodestar/internal/app",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/common/auth",
        "//internal/common/lodestarDir",
        "//internal/common/repo",
        "//internal/common/tag",
        "//vendor/github.com/go-git/go-billy/v5:go-billy",
        "//vendor/github.com/go-git/go-git/v5:go-git",
        "//vendor/github.com/goccy/go-yaml",
    ],
)
