load(":app.bzl", "app_push", "app_promote")

app_push(
    name = "push_example",
    app_config = "lodestar-folder-app-example.yaml",
    environment = "dev",
    lodestar = "//cmd/lodestar",
    tag = "$(tag)",
)

app_promote(
    name = "promote_example",
    lodestar = "//cmd/lodestar",
    app_config = "lodestar-folder-app-example.yaml",
    src_env = "dev",
    dest_env = "qa",
)