load(":app.bzl", "app_promote", "app_push")

app_push(
    name = "push_example",
    app_config = "lodestar-folder-app-example.yaml",
    environment = "dev",
    lodestar = "//cmd/lodestar",
    yaml_keys = "$(yaml-keys)",
)

app_promote(
    name = "promote_example",
    app_config = "lodestar-folder-app-example.yaml",
    dest_env = "qa",
    lodestar = "//cmd/lodestar",
    src_env = "dev",
)
