load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "auth",
    srcs = ["auth.go"],
    importpath = "github.com/lodestar-cli/lodestar/internal/common/auth",
    visibility = ["//:__subpackages__"],
    deps = ["//vendor/github.com/go-git/go-git/v5/plumbing/transport/http"],
)
