load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "environment",
    srcs = [
        "environment.go",
        "environmentState.go",
    ],
    importpath = "github.com/lodestar-cli/lodestar/internal/common/environment",
    visibility = ["//:__subpackages__"],
)

go_test(
    name = "environment_test",
    srcs = ["environmentState_test.go"],
    embed = [":environment"],
)
